--- a/web/css/vacancesdirectes/compte.less
+++ b/web/css/vacancesdirectes/compte.less
@@ -404,81 +404,12 @@ textarea{background-color:@colorBgGrisC;width:216px;height:81px;padding: 0 7px;b
       }
     }
 
-    // step 2
-    &.summary{
-      #option{
-        h2 + p{font-weight:bold;}
-        .label{vertical-align:top;font:inherit;color:inherit;text-transform:inherit;margin-right:5px;}
-        .field textarea{width:423px;height:54px;}
-        .criteria{margin-bottom:10px;clear:both;
-          .label{float:left;._verticalCenter(27px);}
-          input{width:125px;}
-        }
-        .aField{
-          input[type="checkbox"]{margin-top:1px;}
-          label{font-style:italic;font-weight:bold;
-            a{color:@colorFushia;}
-          }
-        }
-      }
-      #paiement{
-        table{display:block;background-color:@colorBgBlanc;margin:10px 0;
-          th{background-color:@colorGris2;color:@colorBlanc;padding:10px;text-align:center;border:1px solid @colorGris2;font-weight:bold;}
-          td{margin:10px 0;padding:10px;text-align:left;border:1px solid @colorGris2;
-            &:nth-child(1){font-weight:bold;}
-            &.amount{width:125px;text-align:right;}
-          }
-        }
-      }
-    }
-
-    // step 3
-    /* --> payment.css */
-
-    // step 4
-    &.confirmation{
-      td{height:27px;}
-      #authentication,
-      #occupant{font-weight:bold;
-        td{color:@colorGris0;
-          &.label{color:inherit;text-transform:inherit;font:inherit;display:table-cell;}
-        }
-        #address,
-        #occupant_address{
-          margin:10px 0;
-        }
-      }
-      #option{font-weight:bold;
-        .label,
-        .field{width:276px;}
-        .label{vertical-align:top;font:inherit;color:inherit;text-transform:inherit;margin-right:20px;}
-        .field{color:@colorGris0;display:inline-block;}
-        .criteria{margin-bottom:10px;clear:both;
-          .label{float:left;._verticalCenter(27px);}
-          input{width:125px;}
-        }
-        select[name="stat_ORIG_combo"] + .newListSelected{
-          .SSContainerDivWrapper{min-width:146px;}
-        }
-        .aField{
-          input[type="checkbox"]{margin-top:1px;margin-left:-1px;}
-          label{font-style:italic;font-weight:bold;
-            a{color:@colorFushia;}
-          }
-        }
-      }
-      #paiement{
-        table.paymentList{display:block;background-color:@colorBgBlanc;margin:10px 0;
-          th{background-color:@colorGris2;color:@colorBlanc;padding:10px;text-align:center;border:1px solid @colorGris2;}
-          td{margin:10px 0;padding:10px;text-align:left;border:1px solid @colorGris2;
-            &:nth-child(1){font-weight:bold;}
-            &.amount{width:125px;text-align:right;}
-          }
-        }
-        table#payment_layer_cc{font-weight:bold;
-          td{color:@colorGris0;
-            &.label{color:inherit;text-transform:inherit;font:inherit;display:table-cell;}
-          }
+  // request
+    &.request{
+      select.control_select[multiple="multiple"]{display:none;}
+      .sMultSelectUl{background-color:@colorBgGrisC;padding:0;;overflow:auto;width:458px;max-height:115px;margin:15px 0;
+        li{padding:0 10px;._verticalCenter(23px);cursor:pointer;
+          &.selected{background-color:@colorFushia;color:@colorBlanc;}
         }
       }
     }
@@ -535,7 +466,7 @@ textarea{background-color:@colorBgGrisC;width:216px;height:81px;padding: 0 7px;b
     &.droite{float:right;}
   }
   .footerNavigation.gauche a,
-  .footerNavigation.droite a{display:block;border:0;text-transform:uppercase;text-decoration:none;font:bold 14px/22px @ptnarrow;padding:3px 12px;._border-radius(7px);color:@colorBlanc;background-image:url('../../images/vacancesdirectes/common/ui/lrArrowResalys.png');background-repeat:no-repeat;}
+  .footerNavigation.droite a{display:block;border:0;text-transform:uppercase;text-decoration:none;font:bold 14px/22px @ptnarrow;padding:3px 12px;._border-radius(7px);color:@colorBlanc;background-image:url('../../images/vacancesdirectes/common/ui/lrArrowResalysGrey.png');background-repeat:no-repeat;}
   .footerNavigation.gauche a{background-position:5px 0;padding-left:25px;background-color:@colorBgGrisF;}
   .footerNavigation.droite a{background-image:none;background-color:@colorFushia;}
   .footerNavigation.pageListe{._border-radius(3px);._box-shadow(0 1px 2px rgba(0, 0, 0, 0.05));float:right;
